--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="footer__social">
                 <a href="https://www.facebook.com/som.lom.12/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://twitter.com/Solomon84472259" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
                  <a href="https://github.com/Solomonbelay" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; Solomon. All rigths reserved</p>
