--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
         <title> My portfolio Portfolio </title>
     </head>
     <body>
@@ -154,7 +153,7 @@
                                 <i class='bx bxl-php skills__icon' ></i>
                                
 
-                                <span class="skills__name">java</span>
+                                <span class="skills__name">PHP</span>
                             </div>
                             <div class="skills__bar skills__js">
                                 
