--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,I'am <span class="home__title-color">Solomon</span><br> Web Developer and mobile app developer</h1>
+                    <h1 class="home__title">Hi,I'am <span class="home__title-color">Solomon</span><br> Web and mobile app developer</h1>
  <img src="assets/img/logo.jpg" width="350px"  height="auto" alt="">
                    
                 </div>
