--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <title> My portfolio Portfolio </title>
+        <title> My portfolio</title>
     </head>
     <body>
         <!--===== HEADER =====-->
