--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"   placeholder="description"></textarea>
+                        <input type="text"  name="name" placeholder="Name" class="contact__input">
+                        <input type="email" name="email" placeholder="Email" class="contact__input">
+                        <textarea name="description" id="" cols="0" rows="10" class="contact__input"   placeholder="description"></textarea>
                         <input type="button" value="Submit" class="contact__button button">
                     </form>
                 </div>
