--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="assets/css/styles.css">
-
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <title> My portfolio</title>
@@ -213,7 +212,7 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
+                    <form action="https://script.google.com/macros/s/AKfycbwP1FPemY95RpAb5wTXKPm_MU4UIG4XoiZZhnVtLd8d-ikJT-Cruw1qDb_p4wXSacs6/exec"  method="post"   class="contact__form">
                         <input type="text"  name="name" placeholder="Name" class="contact__input">
                         <input type="email" name="email" placeholder="Email" class="contact__input">
                         <textarea name="description" id="" cols="0" rows="10" class="contact__input"   placeholder="description"></textarea>
