--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
 
                 <div class="contact__container bd-grid">
                     <form action="https://script.google.com/macros/s/AKfycbx-VcAlplWOC4bWgsH26_uRlEWuwnb5oXmO35-ABxxHixrLMoU91AgbT5G4PxMI4rJP/exec"  method="post"   class="contact__form">
-                        <input type="text"  name="name" placeholder="Name" class="contact__input">
+                        <input type="text"  name="name" placeholder="Name" class="contact__input" />
                         
-                        <input type="email" name="email" placeholder="Email" class="contact__input">
+                        <input type="email" name="email" placeholder="Email" class="contact__input"  />
                         <textarea name="description" id="" cols="0" rows="10" class="contact__input"   placeholder="description"></textarea>
-                        <input type="button" value="Submit" class="contact__button button">
+                        <input type="submit" value="Submit" class="contact__button button" />
                     </form>
                 </div>
             </section>
