--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <img src="assets/img/project1.png" alt="">
                     </a>
                     <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/food.png" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
