--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="nav bd-grid">
                 <div>
                     
-                    <a href="#" class="nav__logo">  DEVELOPER ,SOLOMON</a>
+                    <a href="#" class="nav__logo">  DEVELOPER ,SOLOMON BELAY</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
