--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     
                     <div>
-                     I'm <b>Solomon</b> , a dedicated  Full-Stack web developer and computer science student with a passion for creating innovative digital experiences. I thrive on turning ideas into reality through clean, efficient code and user-centric design.           
+                     I'm <b>Solomon Belay </b> , a dedicated  Full-Stack web developer and computer science student with a passion for creating innovative digital experiences. I thrive on turning ideas into reality through clean, efficient code and user-centric design.           
                     </div>                                   
                 </div>
             </section>
