--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     </div>
                     
                     <div>
-                     I'm <b>Solomon Belay </b> , a dedicated  Full-Stack web developer and computer science student with a passion for creating innovative digital experiences. I thrive on turning ideas into reality through clean, efficient code and user-centric design.           
+                     <b>I'm Solomon Belay,</b> a dedicated Full-Stack Web Developer with a Bachelor’s degree in Computer Science from the University of Gondar. I have a passion for creating innovative digital experiences, thriving on turning ideas into reality through clean, efficient code and user-centric design.       
+                  
                     </div>                                   
                 </div>
             </section>
@@ -82,7 +83,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">"As Full-Stack web developer with 4 years of experience, I bring a deep understanding of front-end and back-end technologies, along with a passion for crafting elegant and efficient solutions. Proficient in HTML, CSS, php ,JavaScript, and various frameworks/libraries such as React js ,node js </p>
+                        <p class="skills__text">"As Full-Stack web developer with 1 years of experience, I bring a deep understanding of front-end and back-end technologies, along with a passion for crafting elegant and efficient solutions. Proficient in HTML, CSS, php ,JavaScript, and various frameworks/libraries such as React js ,node js </p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
