--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <a href="project1.html" class="work__img">
                         <img src="assets/img/project1.png" alt="">
                     </a>
-                    <a href="" class="work__img">
+                    <a href="project2.html" class="work__img">
                         <img src="assets/img/hms1.png" alt="">
                     </a>
                     <a href="" class="work__img">
