--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@
                 <div class="work__container bd-grid">
                     <a href="project1.html" class="work__img">
                         <img src="assets/img/project1.png" alt="">
-        <span class="watermark" style="position: absolute; color: rgba(0, 0, 0, 0.7); font-size: 20px; font-weight: bold; pointer-events: none; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">Click image to view details</span>
-
+       <span class="watermark" style="position: absolute; bottom: 40%; left: 10px; color: rgba(0, 0, 0, 0.7); font-size: 20px; font-weight: bold; pointer-events: none; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">click image to view details</span>
                     </a>
                     <a href="project2.html" class="work__img">
                         <img src="assets/img/hms1.png" alt="">
+                               <span class="watermark" style="position: absolute; bottom: 40%; left: 10px; color: rgba(0, 0, 0, 0.7); font-size: 20px; font-weight: bold; pointer-events: none; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">click image to view details</span>
+
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
