--- a/index.html
+++ b/index.html
@@ -187,35 +187,51 @@
             </section>
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+            <!--===== WORK =====-->
+<section class="work section" id="work">
+    <h2 class="section-title">Work</h2>
 
-                <div class="work__container bd-grid">
-                    <a href="project1.html" class="work__img">
-                        <img src="assets/img/project1.png" alt="">
-       <span class="watermark" style="position: absolute; bottom: 40%; left: 10px; color: rgba(0, 0, 0, 0.7); font-size: 20px; font-weight: bold; pointer-events: none; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">click image to view details</span>
-                    </a>
-                    <a href="project2.html" class="work__img">
-                        <img src="assets/img/hms1.png" alt="">
-                               <span class="watermark" style="position: absolute; bottom: 40%; left: 10px; color: rgba(0, 0, 0, 0.7); font-size: 20px; font-weight: bold; pointer-events: none; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">click image to view details</span>
+    <div class="work__container bd-grid">
 
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
-                    </a>
-                </div>
-            </section>
+        <!-- Project 1 -->
+        <div class="work__item">
+            <img src="assets/img/project1.png" alt="Project 1" class="work__img">
+            <a href="project1.html" class="button work__button">View Project</a>
+        </div>
 
-            <!--===== CONTACT =====-->
+        <!-- Project 2 -->
+        <div class="work__item">
+            <img src="assets/img/hms1.png" alt="Project 2" class="work__img">
+            <a href="project2.html" class="button work__button">View Project</a>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="work__item">
+            <img src="assets/img/work3.jpg" alt="Project 3" class="work__img">
+            <a href="project3.html" class="button work__button">View Project</a>
+        </div>
+
+        <!-- Project 4 -->
+        <div class="work__item">
+            <img src="assets/img/work4.jpg" alt="Project 4" class="work__img">
+            <a href="project4.html" class="button work__button">View Project</a>
+        </div>
+
+        <!-- Project 5 -->
+        <div class="work__item">
+            <img src="assets/img/work5.jpg" alt="Project 5" class="work__img">
+            <a href="project5.html" class="button work__button">View Project</a>
+        </div>
+
+        <!-- Project 6 -->
+        <div class="work__item">
+            <img src="assets/img/work6.jpg" alt="Project 6" class="work__img">
+            <a href="project6.html" class="button work__button">View Project</a>
+        </div>
+
+    </div>
+</section>
+<!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
@@ -251,3 +267,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
