--- a/index.html
+++ b/index.html
@@ -77,114 +77,96 @@
             </section>
 
             <!--===== SKILLS =====-->
-          <!--===== SKILLS =====-->
-<section class="skills section" id="skills">
-    <h2 class="section-title">Skills</h2>
-
-    <div class="skills__container bd-grid">          
-        <div>
-            <h2 class="skills__subtitle">Professional Skills</h2>
-            <p class="skills__text">
-                As a Full-Stack web developer with 1 year of experience, I bring a deep understanding of front-end and back-end technologies, along with a passion for crafting elegant and efficient solutions. Proficient in HTML, CSS, PHP, JavaScript, and various frameworks/libraries such as React.js, Node.js, MongoDB, and MySQL.
-            </p>
-
-            <!-- Repeat for all skills -->
-            <!-- HTML -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-html5 skills__icon'></i>
-                    <span class="skills__name">HTML5</span>
-                </div>
-                <div class="skills__bar skills__html"></div>
-                <div><span class="skills__percentage">95%</span></div>
-            </div>
-
-            <!-- CSS -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-css3 skills__icon'></i>
-                    <span class="skills__name">CSS3</span>
-                </div>
-                <div class="skills__bar skills__css"></div>
-                <div><span class="skills__percentage">85%</span></div>
-            </div>
-
-            <!-- JavaScript -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-javascript skills__icon'></i>
-                    <span class="skills__name">JavaScript</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">65%</span></div>
-            </div>
-
-            <!-- React -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-react skills__icon'></i>
-                    <span class="skills__name">React.js</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">60%</span></div>
-            </div>
-
-            <!-- Node -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-nodejs skills__icon'></i>
-                    <span class="skills__name">Node.js</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">50%</span></div>
-            </div>
-
-            <!-- PHP -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-php skills__icon'></i>
-                    <span class="skills__name">PHP</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">65%</span></div>
-            </div>
-
-            <!-- MongoDB -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxl-mongodb skills__icon'></i>
-                    <span class="skills__name">MongoDB</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">85%</span></div> 
-            </div>
-
-            <!-- MySQL -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bx-data skills__icon'></i>
-                    <span class="skills__name">MySQL</span>
-                </div>
-                <div class="skills__bar skills__js"></div>
-                <div><span class="skills__percentage">70%</span></div>
-            </div>
-
-            <!-- UI/UX -->
-            <div class="skills__data">
-                <div class="skills__names">
-                    <i class='bx bxs-paint skills__icon'></i>
-                    <span class="skills__name">UX/UI</span>
-                </div>
-                <div class="skills__bar skills__ux"></div>
-                <div><span class="skills__percentage">80%</span></div>
-            </div>
-        </div>
-        
-        <div>
-            <img src="assets/img/work3.jpg" alt="" class="skills__img">
-        </div>
+   <!-- HTML -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-html5 skills__icon'></i>
+        <span class="skills__name">HTML5</span>
     </div>
-</section>
+    <div class="skills__bar" style="width: 95%;"></div>
+    <div><span class="skills__percentage">95%</span></div>
+</div>
+
+<!-- CSS -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-css3 skills__icon'></i>
+        <span class="skills__name">CSS3</span>
+    </div>
+    <div class="skills__bar" style="width: 85%;"></div>
+    <div><span class="skills__percentage">85%</span></div>
+</div>
+
+<!-- JavaScript -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-javascript skills__icon'></i>
+        <span class="skills__name">JavaScript</span>
+    </div>
+    <div class="skills__bar" style="width: 65%;"></div>
+    <div><span class="skills__percentage">65%</span></div>
+</div>
+
+<!-- React -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-react skills__icon'></i>
+        <span class="skills__name">React.js</span>
+    </div>
+    <div class="skills__bar" style="width: 60%;"></div>
+    <div><span class="skills__percentage">60%</span></div>
+</div>
+
+<!-- Node.js -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-nodejs skills__icon'></i>
+        <span class="skills__name">Node.js</span>
+    </div>
+    <div class="skills__bar" style="width: 50%;"></div>
+    <div><span class="skills__percentage">50%</span></div>
+</div>
+
+<!-- PHP -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-php skills__icon'></i>
+        <span class="skills__name">PHP</span>
+    </div>
+    <div class="skills__bar" style="width: 65%;"></div>
+    <div><span class="skills__percentage">65%</span></div>
+</div>
+
+<!-- MongoDB -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxl-mongodb skills__icon'></i>
+        <span class="skills__name">MongoDB</span>
+    </div>
+    <div class="skills__bar" style="width: 85%;"></div>
+    <div><span class="skills__percentage">85%</span></div>
+</div>
+
+<!-- MySQL -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bx-data skills__icon'></i>
+        <span class="skills__name">MySQL</span>
+    </div>
+    <div class="skills__bar" style="width: 70%;"></div>
+    <div><span class="skills__percentage">70%</span></div>
+</div>
+
+<!-- UX/UI -->
+<div class="skills__data">
+    <div class="skills__names">
+        <i class='bx bxs-paint skills__icon'></i>
+        <span class="skills__name">UX/UI</span>
+    </div>
+    <div class="skills__bar" style="width: 80%;"></div>
+    <div><span class="skills__percentage">80%</span></div>
+</div>
+
 
 
             <!--===== WORK =====-->
@@ -268,5 +250,6 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
