--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title> My portfolio</title>
     </head>
     <body>
+        
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
@@ -77,7 +78,18 @@
             </section>
 
             <!--===== SKILLS =====-->
-   <!-- HTML -->
+<section class="skills section" id="skills">
+    <h2 class="section-title">Skills</h2>
+
+    <div class="skills__container bd-grid">          
+        <div>
+            <h2 class="skills__subtitle">Professional Skills</h2>
+            <p class="skills__text">
+                As a Full-Stack web developer with 1 year of experience, I bring a deep understanding of front-end and back-end technologies, along with a passion for crafting elegant and efficient solutions. Proficient in HTML, CSS, PHP, JavaScript, and various frameworks/libraries such as React.js, Node.js, MongoDB, and MySQL.
+            </p>
+
+            <!-- Repeat for all skills -->
+<!-- HTML -->
 <div class="skills__data">
     <div class="skills__names">
         <i class='bx bxl-html5 skills__icon'></i>
@@ -167,8 +179,13 @@
     <div><span class="skills__percentage">80%</span></div>
 </div>
 
-
-
+        </div>
+        
+        <div>
+            <img src="assets/img/work3.jpg" alt="" class="skills__img">
+        </div>
+    </div>
+</section>
             <!--===== WORK =====-->
             <!--===== WORK =====-->
 <section class="work section" id="work">
