--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Add Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
         <title> My portfolio</title>
     </head>
     <body>
@@ -152,7 +155,7 @@
 <!-- MongoDB -->
 <div class="skills__data">
     <div class="skills__names">
-        <i class='bx bxl-mongodb skills__icon'></i>
+        <i class='bx bxl-leaf skills__icon'></i> 
         <span class="skills__name">MongoDB</span>
     </div>
     <div class="skills__bar" style="width: 80%;"></div>
@@ -267,6 +270,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
