--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <!-- MongoDB -->
 <div class="skills__data">
     <div class="skills__names">
-     <i class='bx bx-leaf skills__icon'></i> 
+    <i class="fas fa-database skills__icon"></i>
         <span class="skills__name">MongoDB</span>
     </div>
     <div class="skills__bar" style="width: 80%;"></div>
@@ -270,6 +270,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
