--- a/index.html
+++ b/index.html
@@ -196,41 +196,61 @@
 
     <div class="work__container bd-grid">
 
+     <!--===== WORK =====-->
+<section class="work section" id="work">
+    <h2 class="section-title">Work</h2>
+
+    <!-- New Heading -->
+    <h2 class="section-subtitle" style="text-align: center; margin-bottom: 1rem;">
+        Click image to view more about the project
+    </h2>
+
+    <div class="work__container bd-grid">
+
         <!-- Project 1 -->
         <div class="work__item">
-            <img src="assets/img/project1.png" alt="Project 1" class="work__img">
-            <a href="project1.html" class="button work__button">View Project</a>
+            <a href="project1.html">
+                <img src="assets/img/project1.png" alt="Project 1" class="work__img">
+            </a>
         </div>
 
         <!-- Project 2 -->
         <div class="work__item">
-            <img src="assets/img/hms1.png" alt="Project 2" class="work__img">
-            <a href="project2.html" class="button work__button">View Project</a>
+            <a href="project2.html">
+                <img src="assets/img/hms1.png" alt="Project 2" class="work__img">
+            </a>
         </div>
 
         <!-- Project 3 -->
         <div class="work__item">
-            <img src="assets/img/work3.jpg" alt="Project 3" class="work__img">
-            <a href="project3.html" class="button work__button">View Project</a>
+            <a href="project3.html">
+                <img src="assets/img/work3.jpg" alt="Project 3" class="work__img">
+            </a>
         </div>
 
         <!-- Project 4 -->
         <div class="work__item">
-            <img src="assets/img/work4.jpg" alt="Project 4" class="work__img">
-            <a href="project4.html" class="button work__button">View Project</a>
+            <a href="project4.html">
+                <img src="assets/img/work4.jpg" alt="Project 4" class="work__img">
+            </a>
         </div>
 
         <!-- Project 5 -->
         <div class="work__item">
-            <img src="assets/img/work5.jpg" alt="Project 5" class="work__img">
-            <a href="project5.html" class="button work__button">View Project</a>
+            <a href="project5.html">
+                <img src="assets/img/work5.jpg" alt="Project 5" class="work__img">
+            </a>
         </div>
 
         <!-- Project 6 -->
         <div class="work__item">
-            <img src="assets/img/work6.jpg" alt="Project 6" class="work__img">
-            <a href="project6.html" class="button work__button">View Project</a>
+            <a href="project6.html">
+                <img src="assets/img/work6.jpg" alt="Project 6" class="work__img">
+            </a>
         </div>
+
+    </div>
+</section>
 
     </div>
 </section>
@@ -270,6 +290,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
