--- a/index.html
+++ b/index.html
@@ -190,20 +190,16 @@
     </div>
 </section>
             <!--===== WORK =====-->
-            <!--===== WORK =====-->
-<section class="work section" id="work">
-    <h2 class="section-title">Work</h2>
-
-    <div class="work__container bd-grid">
+   
 
      <!--===== WORK =====-->
 <section class="work section" id="work">
     <h2 class="section-title">Work</h2>
 
     <!-- New Heading -->
-    <h2 class="section-subtitle" style="text-align: center; margin-bottom: 1rem;">
+    <p class="section-subtitle" style="text-align: center; margin-bottom: 1rem;">
         Click image to view more about the project
-    </h2>
+    </p>
 
     <div class="work__container bd-grid">
 
@@ -228,26 +224,7 @@
             </a>
         </div>
 
-        <!-- Project 4 -->
-        <div class="work__item">
-            <a href="project4.html">
-                <img src="assets/img/work4.jpg" alt="Project 4" class="work__img">
-            </a>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="work__item">
-            <a href="project5.html">
-                <img src="assets/img/work5.jpg" alt="Project 5" class="work__img">
-            </a>
-        </div>
-
-        <!-- Project 6 -->
-        <div class="work__item">
-            <a href="project6.html">
-                <img src="assets/img/work6.jpg" alt="Project 6" class="work__img">
-            </a>
-        </div>
+     
 
     </div>
 </section>
@@ -290,6 +267,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
