--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <!-- Project 3 -->
         <div class="work__item">
             <a href="project3.html">
-                <img src="assets/img/work3.jpg" alt="Project 3" class="work__img">
+                <img src="assets/img/work3.png" alt="Project 3" class="work__img">
             </a>
         </div>
 
@@ -267,6 +267,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
